add min purchase amount to product response